// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CARD TESTS matches the snapshot when a people are passed down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    checkForFaves={[Function]}
    info={
        Object {
            "homeworld": "Tatooine",
            "id": 1530987621630,
            "name": "Luke Skywalker",
            "population": "200000",
            "species": "Human",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h5>
          Luke Skywalker
</h5>,
        <p>
          Species: 
          Human
           
</p>,
        <p>
          Homeworld: 
          Tatooine
</p>,
        <p>
          Homeworld population:
          200000
</p>,
        <button
          className="favorite-button"
          onClick={[Function]}
>
          Favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Luke Skywalker",
        },
        "ref": null,
        "rendered": "Luke Skywalker",
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Species: ",
            "Human",
            " ",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Species: ",
          "Human",
          " ",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Homeworld: ",
            "Tatooine",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Homeworld: ",
          "Tatooine",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Homeworld population:",
            "200000",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Homeworld population:",
          "200000",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Favorite",
          "className": "favorite-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h5>
            Luke Skywalker
</h5>,
          <p>
            Species: 
            Human
             
</p>,
          <p>
            Homeworld: 
            Tatooine
</p>,
          <p>
            Homeworld population:
            200000
</p>,
          <button
            className="favorite-button"
            onClick={[Function]}
>
            Favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Luke Skywalker",
          },
          "ref": null,
          "rendered": "Luke Skywalker",
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Species: ",
              "Human",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Species: ",
            "Human",
            " ",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Homeworld: ",
              "Tatooine",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Homeworld: ",
            "Tatooine",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Homeworld population:",
              "200000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Homeworld population:",
            "200000",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Favorite",
            "className": "favorite-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CARD TESTS matches the snapshot when a vehicle is passed down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    checkForFaves={[Function]}
    info={
        Object {
            "climate": "temperate",
            "id": 1530987442516,
            "planet": "Alderaan",
            "population": "2000000000",
            "residents": Array [
              "Leia Organa",
              "Bail Prestor Organa",
              "Raymus Antilles",
            ],
            "terrain": "grasslands, mountains",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h5 />,
        <p>
          Climate: 
          temperate
           
</p>,
        <p>
          Terrain: 
          grasslands, mountains
</p>,
        <p>
          Population:
          2000000000
</p>,
        <ul>
          Residents:
          <li>
                    Leia Organa
          </li>
          <li>
                    Bail Prestor Organa
          </li>
          <li>
                    Raymus Antilles
          </li>
</ul>,
        <button
          className="favorite-button"
          onClick={[Function]}
>
          Favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Climate: ",
            "temperate",
            " ",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Climate: ",
          "temperate",
          " ",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Terrain: ",
            "grasslands, mountains",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Terrain: ",
          "grasslands, mountains",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Population:",
            "2000000000",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Population:",
          "2000000000",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Residents:",
            Array [
              <li>
                Leia Organa
</li>,
              <li>
                Bail Prestor Organa
</li>,
              <li>
                Raymus Antilles
</li>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          "Residents:",
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": "Leia Organa",
            },
            "ref": null,
            "rendered": "Leia Organa",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "Bail Prestor Organa",
            },
            "ref": null,
            "rendered": "Bail Prestor Organa",
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "Raymus Antilles",
            },
            "ref": null,
            "rendered": "Raymus Antilles",
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Favorite",
          "className": "favorite-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h5 />,
          <p>
            Climate: 
            temperate
             
</p>,
          <p>
            Terrain: 
            grasslands, mountains
</p>,
          <p>
            Population:
            2000000000
</p>,
          <ul>
            Residents:
            <li>
                        Leia Organa
            </li>
            <li>
                        Bail Prestor Organa
            </li>
            <li>
                        Raymus Antilles
            </li>
</ul>,
          <button
            className="favorite-button"
            onClick={[Function]}
>
            Favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Climate: ",
              "temperate",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Climate: ",
            "temperate",
            " ",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Terrain: ",
              "grasslands, mountains",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Terrain: ",
            "grasslands, mountains",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Population:",
              "2000000000",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Population:",
            "2000000000",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Residents:",
              Array [
                <li>
                  Leia Organa
</li>,
                <li>
                  Bail Prestor Organa
</li>,
                <li>
                  Raymus Antilles
</li>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            "Residents:",
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Leia Organa",
              },
              "ref": null,
              "rendered": "Leia Organa",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "Bail Prestor Organa",
              },
              "ref": null,
              "rendered": "Bail Prestor Organa",
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "Raymus Antilles",
              },
              "ref": null,
              "rendered": "Raymus Antilles",
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Favorite",
            "className": "favorite-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CARD TESTS matches the snapshot when a vehicle is passed down 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    checkForFaves={[Function]}
    info={
        Object {
            "class": "wheeled",
            "id": 0,
            "model": "Digger Crawler",
            "name": "Sand Crawler",
            "passengers": "30",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h5>
          Sand Crawler
</h5>,
        <p>
          Model: 
          Digger Crawler
           
</p>,
        <p>
          Class: 
          wheeled
</p>,
        <p>
          Passengers:
          30
</p>,
        <button
          className="favorite-button"
          onClick={[Function]}
>
          Favorite
</button>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Sand Crawler",
        },
        "ref": null,
        "rendered": "Sand Crawler",
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Model: ",
            "Digger Crawler",
            " ",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Model: ",
          "Digger Crawler",
          " ",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Class: ",
            "wheeled",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Class: ",
          "wheeled",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Passengers:",
            "30",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Passengers:",
          "30",
        ],
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Favorite",
          "className": "favorite-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Favorite",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h5>
            Sand Crawler
</h5>,
          <p>
            Model: 
            Digger Crawler
             
</p>,
          <p>
            Class: 
            wheeled
</p>,
          <p>
            Passengers:
            30
</p>,
          <button
            className="favorite-button"
            onClick={[Function]}
>
            Favorite
</button>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sand Crawler",
          },
          "ref": null,
          "rendered": "Sand Crawler",
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Model: ",
              "Digger Crawler",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Model: ",
            "Digger Crawler",
            " ",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Class: ",
              "wheeled",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Class: ",
            "wheeled",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Passengers:",
              "30",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Passengers:",
            "30",
          ],
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Favorite",
            "className": "favorite-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Favorite",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
